fix: adjusted tailwind classes order and scrollbar style

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  scrollbar-color: #E5E5E5 #555;
+  scrollbar-width: thin;
+  scroll-behavior: smooth;
+}
